--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
           inside their source set.
         -->
         <activity-alias
-            android:name="${applicationId}.App"
+            android:name="org.mozilla.fenix.App"
             android:targetActivity=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
