Basic ghostery extension integration

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ test_artifacts/
 /build/test-tools/google-cloud-sdk/
 /build/test-tools/*.jar
 /build/test-tools/*.gz
+
+# Ghostery extension
+/app/src/main/assets/extensions/ghostery
