--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ android {
         minSdkVersion Config.minSdkVersion
         targetSdkVersion Config.targetSdkVersion
         versionCode 1
-        versionName Config.generateDebugVersionName()
+        /* Ghostery Begin: fixing version name in BuildConfig */
+        versionName Config.generateDebugVersionName(project)
+        /* Ghostery End */
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
