--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,21 @@ android {
         ]
     }
 
+    signingConfigs {
+        release {
+            storeFile file(System.getenv("CERT_PATH"))
+            storePassword System.getenv("CERT_PASS")
+            keyAlias "evidon"
+            keyPassword System.getenv("CERT_PASS")
+        }
+    }
+
     def releaseTemplate = {
         shrinkResources true
         minifyEnabled true
         proguardFiles 'proguard-android-optimize-3.5.0-modified.txt', 'proguard-rules.pro'
         matchingFallbacks = ['release'] // Use on the "release" build type in dependencies (AARs)
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
